--- a/WATT.html
+++ b/WATT.html
@@ -23,11 +23,8 @@
     </div>
 </div>
 
-<header class="display-container content wide" style="max-width:1600px;min-width:500px" id="home">
-    <img class="image" src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Hamburger Catering" width="1600" height="800">
-    <div class="display-bottomLeft padding-large opacity">
-        <h1 class="allusionfont">WATT Girls</h1>
-    </div>
+<header class="display-container content wide" style="max-width:1600px;min-width:500px" id="mission">
+    <img class="image" src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Girls Who are Coding" width="1600" height="800">
 </header>
 
 
