--- a/WATT.html
+++ b/WATT.html
@@ -6,10 +6,9 @@
 
 </head>
 <body>
-<div class="top">
-    <div class="bar white padding nav-box" style="letter-spacing:4px;">
+<div class="top-nav">
+    <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
         <a href="#home" class="bar-item button">WATT CODING</a>
-        <!-- Right-sided navbar links. Hide them on small screens -->
         <div class="right hide-small">
             <a href="#mission" class="bar-item button">Our Mission</a>
             <a href="#calender" class="bar-item button">Calender</a>
@@ -23,7 +22,7 @@
     </div>
 </div>
 
-<header class="display-container content wide" style="max-width:1600px;min-width:500px" id="mission">
+<header class="display-container" style="max-width:1600px;min-width:500px" id="mission">
     <img class="image" src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Girls Who are Coding" width="1600" height="800">
 </header>
 
