--- a/WATT.html
+++ b/WATT.html
@@ -11,7 +11,7 @@
         <a href="#home" class="bar-item button">WATT CODING</a>
         <div class="right hide-small">
             <a href="#mission" class="bar-item button">Our Mission</a>
-            <a href="#calender" class="bar-item button">Calender</a>
+            <a href="#calender" class="bar-item button">Calendar</a>
             <a href="#team" class="bar-item button">Our Team</a>
             <a href="#locations" class="bar-item button">Locations</a>
             <a href="#stats" class="bar-item button">Did you Know?</a>
