finished mission statement section

--- a/WATT.html
+++ b/WATT.html
@@ -8,25 +8,40 @@
 <body>
 <div class="top-nav">
     <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
-        <a href="#home" class="bar-item button">WATT CODING</a>
+        <a href="#home" class="bar-button button">WATT CODING</a>
         <div class="right hide-small">
-            <a href="#mission" class="bar-item button">Our Mission</a>
-            <a href="#calender" class="bar-item button">Calendar</a>
-            <a href="#team" class="bar-item button">Our Team</a>
-            <a href="#locations" class="bar-item button">Locations</a>
-            <a href="#stats" class="bar-item button">Did you Know?</a>
-            <a href="#FAQ" class="bar-item button">FAQ</a>
-            <a href="#contact" class="bar-item button">Contact Us</a>
+            <a href="#mission" class="bar-button button">Our Mission</a>
+            <a href="#calender" class="bar-button button">Calendar</a>
+            <a href="#team" class="bar-button button">Our Team</a>
+            <a href="#locations" class="bar-button button">Locations</a>
+            <a href="#stats" class="bar-button button">Did you Know?</a>
+            <a href="#FAQ" class="bar-button button">FAQ</a>
+            <a href="#contact" class="bar-button button">Contact Us</a>
         </div>
 
     </div>
 </div>
 
-<header class="display-container" style="max-width:1600px;min-width:500px" id="mission">
-    <img class="image" src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Girls Who are Coding" width="1600" height="800">
+<header class="display-container" style="max-width:1600px;min-width:500px" id="home">
+    <img class="image-banner" src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Girls Who are Coding" width="1600" height="800">
 </header>
 
 
+<div class="content-mission" style="max-width:1100px">
+    <div class="row-mission padding-mission64" id="mission">
+        <table>
+            <tr>
+        <td><img class="img-mission" src="https://static.wixstatic.com/media/cfb250_5df974327198447bb34390d166a07c96~mv2.png/v1/fill/w_114,h_164,al_c,usm_0.66_1.00_0.01/cfb250_5df974327198447bb34390d166a07c96~mv2.png"
+                 alt="Tutor leading activity" width="350" height="300"></td>
+        <td>
+
+        <div class="col-mission padding-mission1224">
+            <h1 class="center-mission">Our Mission</h1><br>
+            <p class="largefont-mission">WATT is a non-profit dedicated to introducing girls to computer science at a young age. We aim to create a safe environment for learning and exploring at K-8 schools in the greater Seattle area. We provide strong female role models in the form of our student volunteers with a focus on girls empowering girls.  <span class="w3-tag w3-light-grey">seasonal</span> ingredients.</p>
+        </div>
+            </tr>
+    </table>
+</div><hr>
 
 </body>
 </html>
