--- a/WATT.html
+++ b/WATT.html
@@ -42,6 +42,8 @@
             </tr>
     </table>
 </div><hr>
-
+<div class="calendar"  align="center">
+    <iframe src="https://calendar.google.com/calendar/embed?src=wattcoding%40gmail.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+</div>
 </body>
 </html>
