fixed id for calendar

--- a/WATT.html
+++ b/WATT.html
@@ -11,7 +11,7 @@
         <a href="#home" class="bar-button button">WATT CODING</a>
         <div class="right hide-small">
             <a href="#mission" class="bar-button button">Our Mission</a>
-            <a href="#calender" class="bar-button button">Calendar</a>
+            <a href="#calendar" class="bar-button button">Calendar</a>
             <a href="#team" class="bar-button button">Our Team</a>
             <a href="#locations" class="bar-button button">Locations</a>
             <a href="#stats" class="bar-button button">Did you Know?</a>
@@ -42,8 +42,10 @@
             </tr>
     </table>
 </div><hr>
-<div class="calendar"  align="center">
+<div class="calendar" id="calendar"  align="center">
     <iframe src="https://calendar.google.com/calendar/embed?src=wattcoding%40gmail.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
+
+ <hr>
 </body>
 </html>
