added core team information

--- a/WATT.html
+++ b/WATT.html
@@ -43,10 +43,50 @@
     </table>
 </div>
     <hr>
-   
+
+
 <div class="calendar" id="calendar"  align="center">
  <script src="https://calendar.time.ly/embed.js" data-src="https://calendar.time.ly/tdo4oo2k/" data-max-height="0" id="timely_script" class="timely-script"></script>
 </div>
     <hr>
+
+    <div class="row-mission padding-mission64" id="team">
+        <div class="col-mission padding-mission1224">
+            <h1 class="center-mission">Our Core Team</h1><br>
+            <h4>Madeleine Doi ~ Core Team Leader</h4>
+            <p class="text-grey">I'm a currently senior at Holy Names Academy. I was first introduced to computer science in 8th grade when
+                participated in a Computer Science Camp. Through the camp I discovered how to print my name
+                to the terminal window. I also uncovered various solutions to improve my life through computer science such as developing
+                and implementing my own calculators and algorithms. I quickly grew my interest in and passion for computer science.
+                Volunteering at WATT enables me to inspire other young women to explore computer science.</p><br>
+
+            <h4>Carmen Polzin ~ Core Team Leader</h4>
+            <p class="text-grey">I was first introduced to computer science in the 10th grade when I had the opportunity to take AP computer
+                science! I had such a fun time in this class and decided to continue my computer science career by involving myself with Projects in
+                CS the following year. Being able to combine two of my interests of working with young kids and learning/teaching computer science is such an amazing
+                opportunity and I can’t wait to teach young women about computer science through WATT this year!</p><br>
+
+            <h4>Claire Zhang ~ Fundraising</h4>
+            <p class="text-grey">I'm a senior at Holy Names and I was first introduced to computer science in eighth grade when I did a coding camp for girls.
+                Sophomore year at HNA I was able to take AP Computer Science and I realized my love for the subject. I'm so glad I'm able to be a part of WATT
+                and help other girls discover computer science.</p><br>
+
+            <h4>Paavnee Chauhan ~ Website Manager</h4>
+            <p class="text-grey">I was first introduced to computer science in the 10th grade when I had the opportunity to take AP computer science! I had such
+                a fun time in this class and decided to continue my computer science career by involving myself with Projects in CS the following year. Being able
+                to combine two of my interests of working with young kids and learning/teaching computer science is such an amazing opportunity and I can’t wait to
+                teach young women about computer science through WATT this year!</p><br>
+
+            <h4>Mia Gerbino ~ Volunteer Coordinator</h4>
+            <p class="text-grey">I'm a senior at Holy Names and I was first introduced to computer science Sophomore year at HNA when I decided to take AP Computer Science.
+                APCS became my favorite class and I grew to love computer science. I'm very excited to spread my enthusiasm for computer science to other young girls by being
+                a part of WATT. </p>
+            <h4>Maria Belanger ~ Outreach Coordinator </h4>
+            <p class="text-grey">I was first introduced to computer science my junior year when I took AP Computer Science. Through the course I discovered a great interest in
+                computer science. Similar to many other women, I was not introduced to computer science at a young age. I volunteered with WATT last year and loved helping introduce
+                young women to computer science early on. As I begin my senior year I am excited and looking forward to helping empower young women through my role on the Core Team. </p>
+        </div>
+        
+    </div>
 </body>
 </html>
