--- a/WATT.html
+++ b/WATT.html
@@ -52,41 +52,60 @@
 
     <div class="row-mission padding-mission64" id="team">
         <div class="col-mission padding-mission1224">
-            <h1 class="center-mission">Our Core Team</h1><br>
+
+            <h1 class="center">Our Core Team</h1><br>
+            <div>
+            <img src="https://static.wixstatic.com/media/cfb250_8ddcca5327ae469e85e4c9301b342a08~mv2.jpg/v1/fill/w_240,h_240,al_c,q_80,usm_0.66_1.00_0.01/cfb250_8ddcca5327ae469e85e4c9301b342a08~mv2.jpg" alt="Madeleine Doi" align="left" height="125" width="125" style="padding-right: 10px">
             <h4>Madeleine Doi ~ Core Team Leader</h4>
-            <p class="text-grey">I'm a currently senior at Holy Names Academy. I was first introduced to computer science in 8th grade when
+            <p class="text-grey"> I'm a currently senior at Holy Names Academy. I was first introduced to computer science in 8th grade when
                 participated in a Computer Science Camp. Through the camp I discovered how to print my name
                 to the terminal window. I also uncovered various solutions to improve my life through computer science such as developing
                 and implementing my own calculators and algorithms. I quickly grew my interest in and passion for computer science.
                 Volunteering at WATT enables me to inspire other young women to explore computer science.</p><br>
-
-            <h4>Carmen Polzin ~ Core Team Leader</h4>
+                </div>
+       <div>
+           <img src="https://static.wixstatic.com/media/cfb250_c218f2f8bbaf4f7c96ef0c0ef342dfac~mv2.png/v1/fill/w_240,h_240,al_c,usm_0.66_1.00_0.01/cfb250_c218f2f8bbaf4f7c96ef0c0ef342dfac~mv2.png" alt="Carmen Polzin" align="left" height="125" width="125" style="padding-right: 10px">
+        <h4>Carmen Polzin ~ Core Team Leader</h4>
             <p class="text-grey">I was first introduced to computer science in the 10th grade when I had the opportunity to take AP computer
                 science! I had such a fun time in this class and decided to continue my computer science career by involving myself with Projects in
                 CS the following year. Being able to combine two of my interests of working with young kids and learning/teaching computer science is such an amazing
                 opportunity and I can’t wait to teach young women about computer science through WATT this year!</p><br>
-
+       </div>
+        <div>
+            <img src="https://static.wixstatic.com/media/cfb250_46f4761f60ec49d496f2088c27e55bd5~mv2_d_3344_5016_s_4_2.png/v1/fill/w_240,h_240,al_c,usm_0.66_1.00_0.01/cfb250_46f4761f60ec49d496f2088c27e55bd5~mv2_d_3344_5016_s_4_2.png" alt="Claire Zhang" align="left" height="125" width="125" style="padding-right: 10px">
             <h4>Claire Zhang ~ Fundraising</h4>
             <p class="text-grey">I'm a senior at Holy Names and I was first introduced to computer science in eighth grade when I did a coding camp for girls.
                 Sophomore year at HNA I was able to take AP Computer Science and I realized my love for the subject. I'm so glad I'm able to be a part of WATT
                 and help other girls discover computer science.</p><br>
 
+        </div>
+         <div>
+             <img src="https://static.wixstatic.com/media/cfb250_e405d6f271e34f10af4eec5f15814897~mv2.png/v1/fill/w_240,h_240,al_c,usm_0.66_1.00_0.01/cfb250_e405d6f271e34f10af4eec5f15814897~mv2.png" alt="Pavvnee" align="left" height="125" width="125" style="padding-right: 10px">
             <h4>Paavnee Chauhan ~ Website Manager</h4>
             <p class="text-grey">I was first introduced to computer science in the 10th grade when I had the opportunity to take AP computer science! I had such
                 a fun time in this class and decided to continue my computer science career by involving myself with Projects in CS the following year. Being able
                 to combine two of my interests of working with young kids and learning/teaching computer science is such an amazing opportunity and I can’t wait to
                 teach young women about computer science through WATT this year!</p><br>
-
+         </div>
+         <div>
+             <img src="https://static.wixstatic.com/media/cfb250_47c2df70f17244c5ae2ba78894a43478~mv2.png/v1/fill/w_240,h_240,al_c,usm_0.66_1.00_0.01/cfb250_47c2df70f17244c5ae2ba78894a43478~mv2.png" alt="Pavvnee" align="left" height="125" width="125" style="padding-right: 10px">
             <h4>Mia Gerbino ~ Volunteer Coordinator</h4>
             <p class="text-grey">I'm a senior at Holy Names and I was first introduced to computer science Sophomore year at HNA when I decided to take AP Computer Science.
                 APCS became my favorite class and I grew to love computer science. I'm very excited to spread my enthusiasm for computer science to other young girls by being
-                a part of WATT. </p>
-            <h4>Maria Belanger ~ Outreach Coordinator </h4>
-            <p class="text-grey">I was first introduced to computer science my junior year when I took AP Computer Science. Through the course I discovered a great interest in
-                computer science. Similar to many other women, I was not introduced to computer science at a young age. I volunteered with WATT last year and loved helping introduce
-                young women to computer science early on. As I begin my senior year I am excited and looking forward to helping empower young women through my role on the Core Team. </p>
+                a part of WATT. </p><br>
+         </div>
+            <div>
+                <img src="https://static.wixstatic.com/media/cfb250_78fe4290f24045e8a9247ca656af7b08~mv2_d_2176_3788_s_2.jpg/v1/fill/w_240,h_240,al_c,q_80,usm_0.66_1.00_0.01/cfb250_78fe4290f24045e8a9247ca656af7b08~mv2_d_2176_3788_s_2.jpg" alt="Claire Zhang" align="left" height="125" width="125" style="padding-right: 10px">
+                <h4>Maria Belanger ~ Fundraising</h4>
+                <p class="text-grey">I'm a senior at Holy Names and I was first introduced to computer science in eighth grade when I did a coding camp for girls.
+                    Sophomore year at HNA I was able to take AP Computer Science and I realized my love for the subject. I'm so glad I'm able to be a part of WATT
+                    and help other girls discover computer science.</p><br>
+
+            </div>
+
+
         </div>
-        
     </div>
+
 </body>
 </html>
