working on founders page

--- a/WATT.html
+++ b/WATT.html
@@ -50,10 +50,31 @@
 </div>
     <hr>
 
-    <div class="row-mission padding-mission64" id="team">
-        <div class="col-mission padding-mission1224">
+<!--    <div class="row-mission padding-mission64" id="team">-->
+<!--        <div class="col-mission padding-mission1224">-->
 
-            <h1 class="center">Our Core Team</h1><br>
+
+   <h1 align="center" id="team">About Us</h1>
+    <p class="text-grey">
+        WATT is a non-profit organization founded in 2015 by two Holy Names graduates as a way to introduce girls to computer science at a young age.
+        We are dedicated to bringing computer science to middle school aged girls throughout the Greater Seattle Area. Our organization is run by a core
+        team of juniors and seniors.</p>
+<!--    <div class="padding-left-team">-->
+<!--        <h1 class="center">Founders</h1><br>-->
+<!--        <div>-->
+<!--            <img src="https://static.wixstatic.com/media/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg/v1/crop/x_163,y_299,w_193,h_231/fill/w_264,h_318,al_c,lg_1,q_80/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg" alt="Madeleine Doi" align="left" height="125" width="125" style="padding-right: 10px">-->
+<!--            <h4>Mackenzie Jorgensen</h4>-->
+<!--        </div>-->
+
+<!--      -->
+<!--        <br>-->
+
+
+
+    </div>
+
+    <div class="padding-right-team">
+        <h1 class="center">Our Core Team</h1><br>
             <div>
             <img src="https://static.wixstatic.com/media/cfb250_8ddcca5327ae469e85e4c9301b342a08~mv2.jpg/v1/fill/w_240,h_240,al_c,q_80,usm_0.66_1.00_0.01/cfb250_8ddcca5327ae469e85e4c9301b342a08~mv2.jpg" alt="Madeleine Doi" align="left" height="125" width="125" style="padding-right: 10px">
             <h4>Madeleine Doi ~ Core Team Leader</h4>
@@ -104,7 +125,7 @@
             </div>
 
 
-        </div>
+<!--        </div>-->
     </div>
 
 </body>
