--- a/WATT.html
+++ b/WATT.html
@@ -59,15 +59,21 @@
         WATT is a non-profit organization founded in 2015 by two Holy Names graduates as a way to introduce girls to computer science at a young age.
         We are dedicated to bringing computer science to middle school aged girls throughout the Greater Seattle Area. Our organization is run by a core
         team of juniors and seniors.</p>
-<!--    <div class="padding-left-team">-->
-<!--        <h1 class="center">Founders</h1><br>-->
-<!--        <div>-->
-<!--            <img src="https://static.wixstatic.com/media/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg/v1/crop/x_163,y_299,w_193,h_231/fill/w_264,h_318,al_c,lg_1,q_80/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg" alt="Madeleine Doi" align="left" height="125" width="125" style="padding-right: 10px">-->
-<!--            <h4>Mackenzie Jorgensen</h4>-->
-<!--        </div>-->
+    <div class="padding-left-team">
+        <h1 class="center">Founders</h1><br>
+        <div id="side">
+            <img src="https://static.wixstatic.com/media/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg/v1/crop/x_163,y_299,w_193,h_231/fill/w_264,h_318,al_c,lg_1,q_80/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg" alt="Madeleine Doi" align="left" height="125" width="125" style="padding-right: 10px">
+            <h4>Mackenzie Jorgensen </h4>
 
-<!--      -->
-<!--        <br>-->
+
+        </div>
+
+        <div id="side-right">
+            <img src="ll/w_264,h_318,al_c,lg_1,q_80/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg" alt="Madeleine Doi" align="left" height="125" width="125" style="padding-right: 10px">
+        <h4>Laura DeBoldt</h4>
+        </div>
+
+        <br>
 
 
 
