need to finish founders

--- a/WATT.html
+++ b/WATT.html
@@ -60,18 +60,23 @@
         We are dedicated to bringing computer science to middle school aged girls throughout the Greater Seattle Area. Our organization is run by a core
         team of juniors and seniors.</p>
     <div class="padding-left-team">
+        <br>
+        <br>
         <h1 class="center">Founders</h1><br>
-        <div id="side">
-            <img src="https://static.wixstatic.com/media/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg/v1/crop/x_163,y_299,w_193,h_231/fill/w_264,h_318,al_c,lg_1,q_80/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg" alt="Madeleine Doi" align="left" height="125" width="125" style="padding-right: 10px">
-            <h4>Mackenzie Jorgensen </h4>
-
-
+        <div class="founders-image">
+        <img src="https://static.wixstatic.com/media/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg/v1/crop/x_163,y_299,w_193,h_231/fill/w_264,h_318,al_c,lg_1,q_80/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg" height="125" width="125">
+        <h4>Mackenzie <br> Jorgensen </h4>
+        <img src="https://static.wixstatic.com/media/cfb250_a4e1f5be1258433b8ea970151ca0a02b~mv2_d_1696_2317_s_2.jpg/v1/crop/x_0,y_41,w_1696,h_2154/fill/w_254,h_324,al_c,q_80,usm_0.66_1.00_0.01/cfb250_a4e1f5be1258433b8ea970151ca0a02b~mv2_d_1696_2317_s_2.jpg" height="125" width="125">
+        <h4>Laura <br> DeBoldt</h4>
+        </div>
+        <div class="founders">
+            <p class="text-grey"> I'm a currently senior at Holy Names Academy. I was first introduced to computer science in 8th grade when
+                participated in a Computer Science Camp. Through the camp I discovered how to print my name
+                to the terminal window. I also uncovered various solutions to improve my life through computer science such as developing
+                and implementing my own calculators and algorithms. I quickly grew my interest in and passion for computer science.
+                Volunteering at WATT enables me to inspire other young women to explore computer science.</p>
         </div>
 
-        <div id="side-right">
-            <img src="ll/w_264,h_318,al_c,lg_1,q_80/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg" alt="Madeleine Doi" align="left" height="125" width="125" style="padding-right: 10px">
-        <h4>Laura DeBoldt</h4>
-        </div>
 
         <br>
 
