fixed founders page

--- a/WATT.html
+++ b/WATT.html
@@ -13,7 +13,7 @@
             <a href="#mission" class="bar-button button">Our Mission</a>
             <a href="#calendar" class="bar-button button">Calendar</a>
             <a href="#team" class="bar-button button">Our Team</a>
-            <a href="#locations" class="bar-button button">Locations</a>
+            <a href="#schools" class="bar-button button">Locations</a>
             <a href="#stats" class="bar-button button">Did you Know?</a>
             <a href="#FAQ" class="bar-button button">FAQ</a>
             <a href="#contact" class="bar-button button">Contact Us</a>
@@ -49,7 +49,7 @@
         <script src="https://calendar.time.ly/embed.js" data-src="https://calendar.time.ly/tdo4oo2k/" data-max-height="0" id="timely_script" class="timely-script"></script>
     </div>
     <hr>
-    
+
 
 
     <h1 align="center" id="team">About Us</h1>
