--- a/WATT.html
+++ b/WATT.html
@@ -174,7 +174,7 @@
 
 <hr>
 
-
+<div class="FAQ" id="FAQ">
     <button class="accordion">How did WATT start?</button>
     <div class="panel">
         <p>
@@ -216,7 +216,7 @@
             Instagram: @wattcoding.</p>
     </div>
 
-
+</div>
 <script>
     var acc = document.getElementsByClassName("accordion");
     var i;
