--- a/WATT.html
+++ b/WATT.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
+    <script src="WATT.js"></script>
+
 </head>
 <body>
 <div class="top-nav">
@@ -49,7 +51,8 @@
     <hr>
 
 
-    <div class="calendar" id="calendar"  align="center">
+    <img src="Calendar.png" height="600" width="1200"/>
+    <div class="calendar" id="calendar" align="center">
         <script src="https://calendar.time.ly/embed.js" data-src="https://calendar.time.ly/tdo4oo2k/" data-max-height="0" id="timely_script" class="timely-script"></script>
     </div>
     <hr>
@@ -240,11 +243,9 @@
         }
     </script>
 
-    <div class="typeform-widget" data-url="https://wattcoding.typeform.com/to/PlHowG"
+    <div id="contact" class="typeform-widget" data-url="https://wattcoding.typeform.com/to/PlHowG"
          style="width: 100%; height: 350px;"></div>
 
-    <div> powered by <a href="https://admin.typeform.com/signup?utm_campaign=PlHowG&utm_source=typeform.com-14210832-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
-
-
+</div>
 </body>
 </html>
