fixed FAQ ID and made opaque

--- a/WATT.html
+++ b/WATT.html
@@ -183,7 +183,7 @@
     <hr>
 
 
-    <div id=FAQ" class="FAQ">
+    <div class="FAQ" div id="FAQ">
     <button class="accordion">How did WATT start?</button>
     <div class="panel">
         <p>
@@ -225,6 +225,7 @@
             Instagram: @wattcoding.</p>
     </div>
 </div>
+    
 
 
     <script>
