deleted madeleines banner

--- a/WATT.html
+++ b/WATT.html
@@ -27,7 +27,7 @@
 <header class="display-container" style="max-width:1600px;min-width:500px" id="home">
     <img class="image-banner" src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Girls Who are Coding" width="1600" height="800">
     <div class="display-bottomleft padding-mission1224 opacity">
-        <a class="typeform-share" href="https://wattcoding.typeform.com/to/PlHowG" data-mode="drawer_right" style="display:inline-block;text-decoration:none;background-color:white;color:black;cursor:pointer;font-family:'Times New Roman',sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank" >Contact Us! </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+        <a class="typeform-share" href="https://wattcoding.typeform.com/to/PlHowG" data-mode="drawer_right" style="display:inline-block;text-decoration:none;background-color:white;color:black;cursor:pointer;font-family:'Times New Roman',sans-serif;font-size:20px;line-height:20px;text-align:center;margin:0;height:25px;padding:0px 20px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank" >Contact Us! </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
     </div>
 
 </header>
@@ -57,8 +57,7 @@
         <script src="https://calendar.time.ly/embed.js" data-src="https://calendar.time.ly/tdo4oo2k/" data-max-height="0" id="timely_script" class="timely-script"></script>
     </div>
     <hr>
-
-
+    
     <div>
         <h1 align="center" id="team">About Us</h1>
         <p class="text-grey">
@@ -83,7 +82,8 @@
             personally and to uplift the computer science field for women.</p><br>
         <br>
         <img src="https://static.wixstatic.com/media/cfb250_cce08d55220a4e3793ed8474dfc4be3b~mv2_d_3024_4032_s_4_2.jpeg/v1/fill/w_1182,h_1574,fp_0.50_0.50,q_90/cfb250_cce08d55220a4e3793ed8474dfc4be3b~mv2_d_3024_4032_s_4_2.jpeg?retry=1" alt="Pavvnee" align="left" height="500" width="500" style="padding-right: 10px">
-        <img src="https://static.wixstatic.com/media/cfb250_78fe4290f24045e8a9247ca656af7b08~mv2_d_2176_3788_s_2.jpg/v1/fill/w_240,h_240,al_c,q_80,usm_0.66_1.00_0.01/cfb250_78fe4290f24045e8a9247ca656af7b08~mv2_d_2176_3788_s_2.jpg" alt="Pavvnee" align="left" height="500" width="500" style="padding-right: 10px">
+        <hr>
+        <img src="https://static.wixstatic.com/media/cfb250_e33bd513db15405f8ba4ff42e913ec23~mv2_d_3024_4032_s_4_2.jpg/v1/fill/w_1182,h_1574,fp_0.50_0.50,q_90/cfb250_e33bd513db15405f8ba4ff42e913ec23~mv2_d_3024_4032_s_4_2.jpg?retry=1" alt="Pavvnee" align="left" height="500" width="500" style="padding-right: 10px">
     </div>
 
     <div class="padding-right-team">
@@ -244,7 +244,7 @@
             });
         }
     </script>
-
+    <hr>
     <div id="contact" class="typeform-widget" data-url="https://wattcoding.typeform.com/to/PlHowG"
          style="width: 100%; height: 350px;"></div>
 
