--- a/WATT.html
+++ b/WATT.html
@@ -38,8 +38,7 @@
     <div class="row-mission padding-mission64" id="mission">
         <table>
             <tr>
-                <td><img class="img-mission" src="https://static.wixstatic.com/media/cfb250_5df974327198447bb34390d166a07c96~mv2.png/v1/fill/w_114,h_164,al_c,usm_0.66_1.00_0.01/cfb250_5df974327198447bb34390d166a07c96~mv2.png"
-                         alt="Tutor leading activity" width="350" height="300"></td>
+                <td><img class="img-mission" src="logo.png" alt="WATT logo"></td>
                 <td>
 
                     <div class="col-mission padding-mission1224">
