added team banner

--- a/WATT.html
+++ b/WATT.html
@@ -58,6 +58,7 @@
     <hr>
 
 
+    <img src="Team.png" height="150" width="1100"/>
     <div>
         <h1 align="center" id="team">About Us</h1>
         <p class="text-grey">
