--- a/WATT.html
+++ b/WATT.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
     <script src="WATT.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -60,8 +61,8 @@
 
     <img src="Team.png" height="150" width="1100"/>
     <div>
-        <h1 align="center" id="team">About Us</h1>
-        <p class="text-grey">
+<!--        <h1 align="center" id="team">About Us</h1>-->
+        <p class="text-grey" align="center">
             WATT is a non-profit organization founded in 2015 by two Holy Names graduates as a way to introduce girls to computer science at a young age.
             We are dedicated to bringing computer science to middle school aged girls throughout the Greater Seattle Area. Our organization is run by a core
             team of juniors and seniors.</p>
