--- a/WATT.html
+++ b/WATT.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="style.css">
     <title>WATT Website</title>
     <script src="WATT.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
