--- a/WATT.html
+++ b/WATT.html
@@ -63,8 +63,8 @@
 
     <img src="Team.png" height="150" width="1100"/>
     <div>
-        <h1 align="center" id="team">About Us</h1>
-        <p class="text-grey">
+<!--        <h1 align="center" id="team">About Us</h1>-->
+        <p class="text-grey" align="center">
             WATT is a non-profit organization founded in 2015 by two Holy Names graduates as a way to introduce girls to computer science at a young age.
             We are dedicated to bringing computer science to middle school aged girls throughout the Greater Seattle Area. Our organization is run by a core
             team of juniors and seniors.</p>
