made schools pretier

--- a/WATT.html
+++ b/WATT.html
@@ -7,8 +7,7 @@
     <script src="WATT.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-
-
+    <link rel="icon" type=logo" href="logo.png"/>
 </head>
 <body>
 <div class="top-nav">
