--- a/WATT.html
+++ b/WATT.html
@@ -68,7 +68,7 @@
             We are dedicated to bringing computer science to middle school aged girls throughout the Greater Seattle Area. Our organization is run by a core
             team of juniors and seniors.</p>
     </div>
-    <div class="padding-left-team col-mission">
+    <div class="padding-left-team col-mission" id="team">
         <h1 class="center">Founders</h1><br>
         <div class="founders-image">
             <img src="https://static.wixstatic.com/media/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg/v1/crop/x_163,y_299,w_193,h_231/fill/w_264,h_318,al_c,lg_1,q_80/cfb250_1f86297cf5764e64b718ffc76f948b4e~mv2.jpeg" height="125" width="125">
