adding resource page

--- a/WATT.html
+++ b/WATT.html
@@ -18,7 +18,7 @@
             <a href="#calendar" class="bar-button button">Calendar</a>
             <a href="#team" class="bar-button button">Our Team</a>
             <a href="#schools" class="bar-button button">Locations</a>
-            <a href="#stats" class="bar-button button">Did you Know?</a>
+            <a href="#resources" class="bar-button button">Resources</a>
             <a href="#FAQ" class="bar-button button">FAQ</a>
             <a href="#contact" class="bar-button button">Contact Us</a>
         </div>
@@ -116,19 +116,17 @@
 
         </div>
         <div>
-            <img src="https://static.wixstatic.com/media/cfb250_e405d6f271e34f10af4eec5f15814897~mv2.png/v1/fill/w_240,h_240,al_c,usm_0.66_1.00_0.01/cfb250_e405d6f271e34f10af4eec5f15814897~mv2.png" alt="Pavvnee" align="left" height="125" width="125" style="padding-right: 10px">
+            <img src="paavnee.jpeg" alt="Pavvnee" align="left" height="125" width="125" style="padding-right: 10px">
             <h4>Paavnee Chauhan ~ Website Manager</h4>
-            <p class="text-grey">I was first introduced to computer science in the 10th grade when I had the opportunity to take AP computer science! I had such
-                a fun time in this class and decided to continue my computer science career by involving myself with Projects in CS the following year. Being able
-                to combine two of my interests of working with young kids and learning/teaching computer science is such an amazing opportunity and I can’t wait to
-                teach young women about computer science through WATT this year!</p><br>
+            <p class="text-grey">I am a senior at Holy Names Academy and have been interested in different aspects of technology for multiple years. I did a coding camp in 8th grade at HNA, which was what first drew me to the multifaceted field. As a junior, I took my first Computer Science
+                class and fell in love with how CS develops a number of unique abilities and different thinking skills that are indefinitely useful. I am excited to be a part of WATT to use Computer Science to empower a new generation of girls!</p><br>
         </div>
         <div>
-            <img src="https://static.wixstatic.com/media/cfb250_47c2df70f17244c5ae2ba78894a43478~mv2.png/v1/fill/w_240,h_240,al_c,usm_0.66_1.00_0.01/cfb250_47c2df70f17244c5ae2ba78894a43478~mv2.png" alt="Pavvnee" align="left" height="125" width="125" style="padding-right: 10px">
+            <img src="mia.png" alt="Pavvnee" align="left" height="125" width="125" style="padding-right: 10px">
             <h4>Mia Gerbino ~ Volunteer Coordinator</h4>
-            <p class="text-grey">I'm a senior at Holy Names and I was first introduced to computer science Sophomore year at HNA when I decided to take AP Computer Science.
-                APCS became my favorite class and I grew to love computer science. I'm very excited to spread my enthusiasm for computer science to other young girls by being
-                a part of WATT. </p><br>
+            <p class="text-grey">I first discovered coding in my sophomore year at Holy Names with AP computer science and I loved the combination of logic and creativity it required. I am a senior now and excited to share my enthusiasm for coding with others
+                and support the growth of women in STEM!
+            </p><br>
         </div>
         <div>
             <img src="https://static.wixstatic.com/media/cfb250_78fe4290f24045e8a9247ca656af7b08~mv2_d_2176_3788_s_2.jpg/v1/fill/w_240,h_240,al_c,q_80,usm_0.66_1.00_0.01/cfb250_78fe4290f24045e8a9247ca656af7b08~mv2_d_2176_3788_s_2.jpg" alt="Claire Zhang" align="left" height="125" width="125" style="padding-right: 10px">
@@ -183,8 +181,25 @@
     </div>
 
     <hr>
+    <img src="RESOURCES.png" id="resources" height="150" width="1100"/>
 
-
+    <div class="row">
+        <div class="column">
+            <a href="https://lightbot.com/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_6e674575c00d49e696625406d23ef3d5~mv2.png/v1/fill/w_348,h_220,al_c,lg_1/cfb250_6e674575c00d49e696625406d23ef3d5~mv2.png" alt="codingbot"></a>
+        </div>
+        <div class="column">
+            <a href="https://scratch.mit.edu/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_4a0cd3e15a8146d8a4b0deeb6ca1a2a5~mv2.png/v1/fill/w_388,h_132,al_c,usm_0.66_1.00_0.01/cfb250_4a0cd3e15a8146d8a4b0deeb6ca1a2a5~mv2.png" alt="scratch" style="padding-top: 25px;"></a>
+        </div>
+        <div class="column">
+            <a href="https://www.madewithcode.com/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_79225ad72d4b4826a17cbf9e64705beb~mv2.png/v1/crop/x_213,y_0,w_666,h_500/fill/w_304,h_226,al_c,usm_0.66_1.00_0.01/cfb250_79225ad72d4b4826a17cbf9e64705beb~mv2.png" alt="madewithcode" style="padding-left:50px;"></a>
+        </div>
+    </div>
+        <a href="https://www.codecademy.com/learn"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_0576003687f243ee8c8eed3add2d502c~mv2.png/v1/fill/w_470,h_88,al_c,q_80,usm_0.66_1.00_0.01/cfb250_0576003687f243ee8c8eed3add2d502c~mv2.webp" alt="codeacademy"></a>
+    <a href="https://www.khanacademy.org/hourofcode"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_139bd206d76f41289bd062989ec0c84c~mv2.png/v1/crop/x_0,y_129,w_599,h_157/fill/w_484,h_128,al_c,q_80,usm_0.66_1.00_0.01/cfb250_139bd206d76f41289bd062989ec0c84c~mv2.webp" alt="khan"></a>
+    <a href="https://www.khanacademy.org/computing/computer-programming"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_1bb73ce2141948718272da9c919830af~mv2.png/v1/crop/x_67,y_75,w_1134,h_216/fill/w_638,h_128,al_c,q_80,usm_0.66_1.00_0.01/cfb250_1bb73ce2141948718272da9c919830af~mv2.webp" alt="khan"></a>
+    <a href="https://www.playcodemonkey.com/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_bbd5571924094681b7f0fe07ffe553b1~mv2.png/v1/fill/w_500,h_236,al_c,q_80,usm_0.66_1.00_0.01/cfb250_bbd5571924094681b7f0fe07ffe553b1~mv2.webp" alt="codingmonkey"></a>
+    <a href="http://www.crunchzilla.com/code-monster"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_4298e3257d5f4c6b867933b4be4f2473~mv2.png/v1/fill/w_242,h_252,al_c,lg_1,q_80/cfb250_4298e3257d5f4c6b867933b4be4f2473~mv2.webp" alt="codemonster"></a>
+    <a href="http://spritebox.com/flash.html"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_ba8dcb61e60b4758a71b9ee59e4fbc98~mv2.png/v1/fill/w_370,h_230,al_c,q_80,usm_0.66_1.00_0.01/cfb250_ba8dcb61e60b4758a71b9ee59e4fbc98~mv2.webp" alt="spritebox"></a>
     <img src="FAQ.png" height="150" width="1100"/>
     <div class="FAQ" div id="FAQ">
     <button class="accordion">How did WATT start?</button>
