--- a/WATT.html
+++ b/WATT.html
@@ -183,20 +183,32 @@
     <hr>
     <img src="RESOURCES.png" id="resources" height="150" width="1100"/>
 
-    <div class="row">
-        <div class="column">
-            <a href="https://lightbot.com/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_6e674575c00d49e696625406d23ef3d5~mv2.png/v1/fill/w_348,h_220,al_c,lg_1/cfb250_6e674575c00d49e696625406d23ef3d5~mv2.png" alt="codingbot"></a>
+    <div class="row-resource schools">
+    <div class="column-resource">
+        <a href="https://lightbot.com/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_6e674575c00d49e696625406d23ef3d5~mv2.png/v1/fill/w_348,h_220,al_c,lg_1/cfb250_6e674575c00d49e696625406d23ef3d5~mv2.png" alt="codingbot" style="width:100%"></a>
+    </div>
+    <div class="column-resource">
+        <a href="https://scratch.mit.edu/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_4a0cd3e15a8146d8a4b0deeb6ca1a2a5~mv2.png/v1/fill/w_388,h_132,al_c,usm_0.66_1.00_0.01/cfb250_4a0cd3e15a8146d8a4b0deeb6ca1a2a5~mv2.png" alt="scratch" style="width:100%; padding-top: 30px;"></a>
+    </div>
+    <div class="column-resource">
+        <a href="https://www.madewithcode.com/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_79225ad72d4b4826a17cbf9e64705beb~mv2.png/v1/crop/x_213,y_0,w_666,h_500/fill/w_304,h_226,al_c,usm_0.66_1.00_0.01/cfb250_79225ad72d4b4826a17cbf9e64705beb~mv2.png" alt="madewithcode"  style="width:100%;"></a>
+    </div>
+</div>
+    <div class="row-resource">
+        <div class="column-resource">
+            <a href="https://www.codecademy.com/learn"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_0576003687f243ee8c8eed3add2d502c~mv2.png/v1/fill/w_470,h_88,al_c,q_80,usm_0.66_1.00_0.01/cfb250_0576003687f243ee8c8eed3add2d502c~mv2.webp" alt="codeacademy" width="350"></a>
         </div>
-        <div class="column">
-            <a href="https://scratch.mit.edu/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_4a0cd3e15a8146d8a4b0deeb6ca1a2a5~mv2.png/v1/fill/w_388,h_132,al_c,usm_0.66_1.00_0.01/cfb250_4a0cd3e15a8146d8a4b0deeb6ca1a2a5~mv2.png" alt="scratch" style="padding-top: 25px;"></a>
+        <div class="column-resource">
+            <a href="https://www.khanacademy.org/hourofcode"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_139bd206d76f41289bd062989ec0c84c~mv2.png/v1/crop/x_0,y_129,w_599,h_157/fill/w_484,h_128,al_c,q_80,usm_0.66_1.00_0.01/cfb250_139bd206d76f41289bd062989ec0c84c~mv2.webp" alt="khan" width="350"></a>
         </div>
-        <div class="column">
-            <a href="https://www.madewithcode.com/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_79225ad72d4b4826a17cbf9e64705beb~mv2.png/v1/crop/x_213,y_0,w_666,h_500/fill/w_304,h_226,al_c,usm_0.66_1.00_0.01/cfb250_79225ad72d4b4826a17cbf9e64705beb~mv2.png" alt="madewithcode" style="padding-left:50px;"></a>
+        <div class="column-resource">
+            <a href="https://www.khanacademy.org/computing/computer-programming"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_1bb73ce2141948718272da9c919830af~mv2.png/v1/crop/x_67,y_75,w_1134,h_216/fill/w_638,h_128,al_c,q_80,usm_0.66_1.00_0.01/cfb250_1bb73ce2141948718272da9c919830af~mv2.webp" alt="khan" width="350"></a>
         </div>
     </div>
-        <a href="https://www.codecademy.com/learn"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_0576003687f243ee8c8eed3add2d502c~mv2.png/v1/fill/w_470,h_88,al_c,q_80,usm_0.66_1.00_0.01/cfb250_0576003687f243ee8c8eed3add2d502c~mv2.webp" alt="codeacademy"></a>
-    <a href="https://www.khanacademy.org/hourofcode"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_139bd206d76f41289bd062989ec0c84c~mv2.png/v1/crop/x_0,y_129,w_599,h_157/fill/w_484,h_128,al_c,q_80,usm_0.66_1.00_0.01/cfb250_139bd206d76f41289bd062989ec0c84c~mv2.webp" alt="khan"></a>
-    <a href="https://www.khanacademy.org/computing/computer-programming"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_1bb73ce2141948718272da9c919830af~mv2.png/v1/crop/x_67,y_75,w_1134,h_216/fill/w_638,h_128,al_c,q_80,usm_0.66_1.00_0.01/cfb250_1bb73ce2141948718272da9c919830af~mv2.webp" alt="khan"></a>
+
+
+
+
     <a href="https://www.playcodemonkey.com/"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_bbd5571924094681b7f0fe07ffe553b1~mv2.png/v1/fill/w_500,h_236,al_c,q_80,usm_0.66_1.00_0.01/cfb250_bbd5571924094681b7f0fe07ffe553b1~mv2.webp" alt="codingmonkey"></a>
     <a href="http://www.crunchzilla.com/code-monster"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_4298e3257d5f4c6b867933b4be4f2473~mv2.png/v1/fill/w_242,h_252,al_c,lg_1,q_80/cfb250_4298e3257d5f4c6b867933b4be4f2473~mv2.webp" alt="codemonster"></a>
     <a href="http://spritebox.com/flash.html"> <img class= onlineresource src="https://static.wixstatic.com/media/cfb250_ba8dcb61e60b4758a71b9ee59e4fbc98~mv2.png/v1/fill/w_370,h_230,al_c,q_80,usm_0.66_1.00_0.01/cfb250_ba8dcb61e60b4758a71b9ee59e4fbc98~mv2.webp" alt="spritebox"></a>
